fix overflow problem by pagination width

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -43,7 +43,6 @@ body{
     max-width: 33rem;
     text-align: center;
     padding: .6em;
-    width: 40em;
     margin: .5em;
     margin-left: 0;
 }
